# ffmpeg-python3

./: .gitignore  Makefile  pyproject.toml
doc/src/: conf.py
examples/: ffmpeg-numpy.ipynb  get_video_thumbnail.py  read_frame_as_jpeg.py  show_progress.py  split_silence.py  tensorflow_stream.py  transcribe.py  video_info.py
ffmpeg/: _filters.py  _view.py  nodes.py
ffmpeg/tests/: test_ffmpeg.py
